--- a/imersao/kafka/connectors/sink-mongo-twitter.properties
+++ b/imersao/kafka/connectors/sink-mongo-twitter.properties
@@ -2,7 +2,8 @@ name = mongo-sink-from-twitter
 connector.class = com.mongodb.kafka.connect.MongoSinkConnector
 task.max = 1
 topics = tweets
-connection.uri = mongodb://root:root@mongodb/
+connection.uri = mongodb://root:root@host.docker.internal/
+# connection.uri = mongodb://root:root@mongodb/
 database = analytics
 value.converter = org.apache.kafka.connect.json.JsonConverter
 value.converter.schemas.enable = false
