--- a/imersao/nextjs/package.json
+++ b/imersao/nextjs/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^17.0.17",
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
+    "javascript-time-ago": "^2.3.13",
     "next": "12.0.10",
     "postcss": "^8.4.6",
     "react": "17.0.2",
