--- a/imersao/nextjs/package.json
+++ b/imersao/nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@types/axios": "^0.14.0",
     "@types/node": "^17.0.17",
     "autoprefixer": "^10.4.2",
